# mdl

./: .Rbuildignore  404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  SUPPORT.html  _pkgdown.yml  authors.html  index.html  justfile  pkgdown.yml  search.json  sitemap.xml
.github/: CONTRIBUTING.md  SUPPORT.md
R/: extendr-wrappers.R  mdl-package.R  mtrx.R  mtrx_compatible.R
articles/: index.html  plain-r.html
articles/articles/: plain-r.html
man/: mdl-package.Rd  mtrx.Rd  mtrx_compatible.Rd
notebooks/: 001_testing_new_impl.R  003_many_rows_benchmark.R
reference/: index.html  mdl-package.html  mdl.html  mtrx.html  mtrx_compatible.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  mdl-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-mtrx.R  test-mtrx_compatible.R
tests/testthat/_snaps/: mtrx.md
vignettes/: .gitignore
vignettes/articles/: plain-r.Rmd
